--- a/home_3/css/main.css
+++ b/home_3/css/main.css
@@ -5,56 +5,100 @@
 }
 
 body {
-    padding: 15px;
-    background-color: #efeaea;
+    background-color: #F5F5F5;
     font-size: 16px;
     color: #000;
 }
 
-form {
-    background-color: #fff;
-    padding: 15px;
+#pop_up {
+    margin: 30px auto;
     display: flex;
     flex-direction: column;
-    max-width: 400px;
-    margin: 0 auto;
-    border-radius: 5px;
-    box-shadow: 5px 5px 30px grey;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    position: relative;
+    width: 420px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 2px 8px rgba(40, 41, 61, 0.08), 0px 20px 32px rgba(96, 97, 112, 0.24);
+    border-radius: 20px;
 }
 
-form *:not(:last-child) {
-    margin-bottom: 20px;
+#close {
+    position: relative;
+    height: 24px;
+    width: 100%;
+}
+
+#close img {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    width: 14px;
+    height: 14px;
+}
+
+.content {
+    padding: 0 16px 16px;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
 }
 
 h1 {
-    font-size: 25px;
+    font-weight: 800;
+    font-size: 28px;
+    line-height: 32px;
+    margin-bottom: 24px;
 }
 
-p {
-    color: darkgray;
-    font-size: 12px;
+.content input {
+    width: 100%;
+    border: 1px solid #cfd8dc;
+    padding: 14px 16px;
+    border-radius: 12px;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
 }
 
-input {
+.content input:focus {
+    border: 1px solid #ffe44d;
     outline: none;
 }
 
-input:focus {
-    border-color: #f7d92b;
+.content input:first-of-type {
+    margin-bottom: 8px;
 }
 
-input, button {
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #d3d0d0;
+.content p {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    color: #7b8e98;
+    margin: 24px 0;
 }
 
-button {
-    font-weight: 600;
+.content button {
+    padding: 14px 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 55px;
+    width: 100%;
+    background-color: #fff;
+    border: 1px solid #cfd8dc;
+    color: #1a1a1a;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
 }
 
-.yellow {
-    background-color: #f7d92b;
+.content button:first-of-type {
+    background-color: #ffe44d;
+    margin-bottom: 8px;
     border: none;
 }
-
