--- a/home_3/css/main.css
+++ b/home_3/css/main.css
@@ -36,6 +36,7 @@ body {
     top: 5px;
     width: 14px;
     height: 14px;
+    cursor: pointer;
 }
 
 .content {
@@ -95,6 +96,7 @@ h1 {
     font-weight: 700;
     font-size: 16px;
     line-height: 20px;
+    cursor: pointer;
 }
 
 .content button:first-of-type {
